--- a/refs.bib
+++ b/refs.bib
@@ -47,3 +47,11 @@
   journal={arXiv preprint arXiv:2103.15416},
   year={2021}
 }
+
+@article{snoek2012practical,
+  title={Practical bayesian optimization of machine learning algorithms},
+  author={Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+  journal={Advances in neural information processing systems},
+  volume={25},
+  year={2012}
+}
