--- a/refs.bib
+++ b/refs.bib
@@ -55,3 +55,27 @@
   volume={25},
   year={2012}
 }
+
+@article{hewing2018cautious,
+  author    = {Lukas Hewing and
+               Alexander Liniger and
+               Melanie N. Zeilinger},
+  title     = {Cautious {NMPC} with Gaussian Process Dynamics for Miniature Race
+               Cars},
+  journal   = {CoRR},
+  volume    = {abs/1711.06586},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1711.06586},
+  eprinttype = {arXiv},
+  eprint    = {1711.06586},
+  timestamp = {Mon, 13 Aug 2018 16:48:08 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1711-06586.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{kinematicBicycleModel,
+  title = {Self Driving Cars Specialization Coursera: Bicycle Model},
+  author    = {Daniel S. Ingram},
+  howpublished = {\url{https://github.com/daniel-s-ingram/self_driving_cars_specialization/blob/master/1_introduction_to_self_driving_cars/Kinematic_Bicycle_Model.ipynb}},
+  note = {Accessed: 2022-01-23}
+}
